welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:4: error: identifier expected but 'while' found.
while (!estFaceMur()){
^